--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.5.1",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "dropzone": "^6.0.0-beta.2"
     }
 }
